--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,5 +1,6 @@
-<p> Learning Log</p>
+{% extends 'learning_logs/base.html' %}
 
-<p> Learning Log helps you keep track of your learning, for any topic you
-    are interested in.
-</p>
+{% block content}
+  <p> Learning Log helps you keep track of your learning, for any topic you
+    are interested in.</p>
+{% endblock content %}
