Added URL and view for each individual topic

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,6 +1,7 @@
 {% extends 'learning_logs/base.html' %}
 
-{% block content}
+{% block content %}
+  <h1>Home Page</h1>
   <p> Learning Log helps you keep track of your learning, for any topic you
     are interested in.</p>
 {% endblock content %}
