--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -5,6 +5,9 @@
   <h2> Topic: {{ topic.next }}</h2>
 
   <p> Entries: </p>
+  <p>
+    <a href="{% url 'learning_logs:new_entry' topic.id %}"> Add new entry</a>
+  </p>
   <ul>
     {% for entry in entries %}
     <li>
